--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,154 @@
 })
 @@include('html/header.html', {})
 <main>
-
+    <section class="banner">
+        <div class="container">
+            <div class="banner__wrapper">
+                <div class="banner__left">
+                    <div class="banner__title">
+                        <span>Натяжные потолки </span>
+                        от производителя
+                    </div>
+                    <div class="banner__subtitle">
+                        Создаем уют и настроение<br>
+                        для вашего <span>#дома</span> или <span>#квартиры</span>
+                    </div>
+                    <div class="banner__people">
+                        <img src="./img/humans.png" alt="humans">
+                    </div>
+                    <div class="banner__counter-people">
+                        <p class="count">31</p>
+                        <p class="text">
+                            тысяча счастливых<br>
+                            клиентов уверенно рекомендует нас
+                        </p>
+                    </div>
+                </div>
+                <div class="banner__right">
+                    <div class="banner__right-title">
+                        Рассчитайте стоимость
+                    </div>
+                    <p class="banner__right-label">Тип потолка</p>
+                    <div class="banner__select">
+                        <div class="banner__value">
+                            <p>
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_121_7147)">
+                                    <path d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24Z" fill="#D80027"/>
+                                    <path d="M6.56719 7.30322L7.60312 10.4907H10.9547L8.24531 12.4642L9.28125 15.6517L6.56719 13.6829L3.85313 15.6517L4.89375 12.4642L2.17969 10.4907H5.53125L6.56719 7.30322Z" fill="#FFDA44"/>
+                                    <path d="M14.227 18.586L13.4348 17.611L12.2629 18.0657L12.9426 17.011L12.1504 16.0313L13.3645 16.3547L14.0488 15.3L14.1145 16.5563L15.3332 16.8797L14.1566 17.3297L14.227 18.586Z" fill="#FFDA44"/>
+                                    <path d="M15.802 15.7266L16.177 14.5266L15.1504 13.8L16.4066 13.7813L16.777 12.5813L17.1848 13.7719L18.441 13.7579L17.4332 14.5079L17.8363 15.6985L16.8098 14.9719L15.802 15.7266Z" fill="#FFDA44"/>
+                                    <path d="M17.9246 8.80796L17.3715 9.93765L18.2715 10.8142L17.0293 10.6361L16.4762 11.7611L16.2605 10.5236L15.0137 10.3455L16.1293 9.75952L15.9137 8.51733L16.8137 9.3939L17.9246 8.80796Z" fill="#FFDA44"/>
+                                    <path d="M14.2602 5.38599L14.1664 6.63755L15.3336 7.11099L14.1102 7.41099L14.0211 8.66724L13.3602 7.59849L12.1367 7.89849L12.9477 6.93755L12.282 5.87349L13.4492 6.34692L14.2602 5.38599Z" fill="#FFDA44"/>
+                                    </g>
+                                    <defs>
+                                    <clipPath id="clip0_121_7147">
+                                    <rect width="24" height="24" fill="white"/>
+                                    </clipPath>
+                                    </defs>
+                                </svg>
+                                <span>Cold Stretch (Матовый Глянцевый)</span>
+                            </p> 
+                            <a href="#">
+                                <svg width="16" height="9" viewBox="0 0 16 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.46967 0.46967C0.762563 0.176777 1.23744 0.176777 1.53033 0.46967L8 6.93934L14.4697 0.46967C14.7626 0.176777 15.2374 0.176777 15.5303 0.46967C15.8232 0.762563 15.8232 1.23744 15.5303 1.53033L8.53033 8.53033C8.23744 8.82322 7.76256 8.82322 7.46967 8.53033L0.46967 1.53033C0.176777 1.23744 0.176777 0.762563 0.46967 0.46967Z" fill="black"/>
+                                </svg> 
+                            </a>                                                           
+                        </div>
+                        <div class="banner__options">
+                            <p class="banner__option">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_121_7147)">
+                                    <path d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24Z" fill="#D80027"/>
+                                    <path d="M6.56719 7.30322L7.60312 10.4907H10.9547L8.24531 12.4642L9.28125 15.6517L6.56719 13.6829L3.85313 15.6517L4.89375 12.4642L2.17969 10.4907H5.53125L6.56719 7.30322Z" fill="#FFDA44"/>
+                                    <path d="M14.227 18.586L13.4348 17.611L12.2629 18.0657L12.9426 17.011L12.1504 16.0313L13.3645 16.3547L14.0488 15.3L14.1145 16.5563L15.3332 16.8797L14.1566 17.3297L14.227 18.586Z" fill="#FFDA44"/>
+                                    <path d="M15.802 15.7266L16.177 14.5266L15.1504 13.8L16.4066 13.7813L16.777 12.5813L17.1848 13.7719L18.441 13.7579L17.4332 14.5079L17.8363 15.6985L16.8098 14.9719L15.802 15.7266Z" fill="#FFDA44"/>
+                                    <path d="M17.9246 8.80796L17.3715 9.93765L18.2715 10.8142L17.0293 10.6361L16.4762 11.7611L16.2605 10.5236L15.0137 10.3455L16.1293 9.75952L15.9137 8.51733L16.8137 9.3939L17.9246 8.80796Z" fill="#FFDA44"/>
+                                    <path d="M14.2602 5.38599L14.1664 6.63755L15.3336 7.11099L14.1102 7.41099L14.0211 8.66724L13.3602 7.59849L12.1367 7.89849L12.9477 6.93755L12.282 5.87349L13.4492 6.34692L14.2602 5.38599Z" fill="#FFDA44"/>
+                                    </g>
+                                    <defs>
+                                    <clipPath id="clip0_121_7147">
+                                    <rect width="24" height="24" fill="white"/>
+                                    </clipPath>
+                                    </defs>
+                                </svg>
+                                <span>Cold Stretch (Матовый Глянцевый)</span>
+                            </p>
+                            <p class="banner__option">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_121_7147)">
+                                    <path d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24Z" fill="#D80027"/>
+                                    <path d="M6.56719 7.30322L7.60312 10.4907H10.9547L8.24531 12.4642L9.28125 15.6517L6.56719 13.6829L3.85313 15.6517L4.89375 12.4642L2.17969 10.4907H5.53125L6.56719 7.30322Z" fill="#FFDA44"/>
+                                    <path d="M14.227 18.586L13.4348 17.611L12.2629 18.0657L12.9426 17.011L12.1504 16.0313L13.3645 16.3547L14.0488 15.3L14.1145 16.5563L15.3332 16.8797L14.1566 17.3297L14.227 18.586Z" fill="#FFDA44"/>
+                                    <path d="M15.802 15.7266L16.177 14.5266L15.1504 13.8L16.4066 13.7813L16.777 12.5813L17.1848 13.7719L18.441 13.7579L17.4332 14.5079L17.8363 15.6985L16.8098 14.9719L15.802 15.7266Z" fill="#FFDA44"/>
+                                    <path d="M17.9246 8.80796L17.3715 9.93765L18.2715 10.8142L17.0293 10.6361L16.4762 11.7611L16.2605 10.5236L15.0137 10.3455L16.1293 9.75952L15.9137 8.51733L16.8137 9.3939L17.9246 8.80796Z" fill="#FFDA44"/>
+                                    <path d="M14.2602 5.38599L14.1664 6.63755L15.3336 7.11099L14.1102 7.41099L14.0211 8.66724L13.3602 7.59849L12.1367 7.89849L12.9477 6.93755L12.282 5.87349L13.4492 6.34692L14.2602 5.38599Z" fill="#FFDA44"/>
+                                    </g>
+                                    <defs>
+                                    <clipPath id="clip0_121_7147">
+                                    <rect width="24" height="24" fill="white"/>
+                                    </clipPath>
+                                    </defs>
+                                </svg>
+                                <span>Hot Dog (Матовый Глянцевый)</span>
+                            </p>
+                            <p class="banner__option">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_121_7147)">
+                                    <path d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24Z" fill="#D80027"/>
+                                    <path d="M6.56719 7.30322L7.60312 10.4907H10.9547L8.24531 12.4642L9.28125 15.6517L6.56719 13.6829L3.85313 15.6517L4.89375 12.4642L2.17969 10.4907H5.53125L6.56719 7.30322Z" fill="#FFDA44"/>
+                                    <path d="M14.227 18.586L13.4348 17.611L12.2629 18.0657L12.9426 17.011L12.1504 16.0313L13.3645 16.3547L14.0488 15.3L14.1145 16.5563L15.3332 16.8797L14.1566 17.3297L14.227 18.586Z" fill="#FFDA44"/>
+                                    <path d="M15.802 15.7266L16.177 14.5266L15.1504 13.8L16.4066 13.7813L16.777 12.5813L17.1848 13.7719L18.441 13.7579L17.4332 14.5079L17.8363 15.6985L16.8098 14.9719L15.802 15.7266Z" fill="#FFDA44"/>
+                                    <path d="M17.9246 8.80796L17.3715 9.93765L18.2715 10.8142L17.0293 10.6361L16.4762 11.7611L16.2605 10.5236L15.0137 10.3455L16.1293 9.75952L15.9137 8.51733L16.8137 9.3939L17.9246 8.80796Z" fill="#FFDA44"/>
+                                    <path d="M14.2602 5.38599L14.1664 6.63755L15.3336 7.11099L14.1102 7.41099L14.0211 8.66724L13.3602 7.59849L12.1367 7.89849L12.9477 6.93755L12.282 5.87349L13.4492 6.34692L14.2602 5.38599Z" fill="#FFDA44"/>
+                                    </g>
+                                    <defs>
+                                    <clipPath id="clip0_121_7147">
+                                    <rect width="24" height="24" fill="white"/>
+                                    </clipPath>
+                                    </defs>
+                                </svg>
+                                <span>burger king (Матовый Глянцевый)</span>
+                            </p>
+                        </div>
+                    </div>
+                    <p class="banner__right-label">Укажите площадь, м<sup>2</sup></p>
+                    <div class="banner__range">
+                        <div class="banner__range-count"><p><span>25</span> м<sup>2</sup></p></div>
+                        <div class="slider-styled" id="slider-round"></div>
+                        <div class="banner__steps">
+                            <p class="banner__steps-step">
+                                2 м<sup>2</sup>
+                            </p>
+                            <p class="banner__steps-step">
+                                20 м<sup>2</sup>
+                            </p>
+                            <p class="banner__steps-step">
+                                40 м<sup>2</sup>
+                            </p>
+                            <p class="banner__steps-step">
+                                60 м<sup>2</sup>
+                            </p>
+                            <p class="banner__steps-step">
+                                80 м<sup>2</sup>
+                            </p>
+                        </div>
+                    </div>
+                    <p class="banner__price">
+                        Стоимость под ключ: <span>23 000 руб</span>
+                    </p>
+                    <form action="#" class="banner__form">
+                        <input type="text" placeholder="Ваш телефон" class="masked">
+                        <button type="submit" class="btn-blue">Оставить заявку</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="banner__background">
+            <img src="./img/baner-bg.png" alt="background">
+        </div>
+    </section>
+    <div style="height: 500px;"></div>
 </main>
 @@include('html/footer.html', {
     "src": "js/app.min.js", 
