--- a/src/html/header.html
+++ b/src/html/header.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="header__bottom">
-            <a href="#" class="header__logo">
+            <a href="#header" scroll class="header__logo">
                 <svg width="50" height="42" viewBox="0 0 50 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M17.3327 40.5898C13.322 31.4407 17.3116 20.708 26.4058 16.4303L41.3306 9.41008C45.3413 18.5592 41.3517 29.292 32.2575 33.5696L17.3327 40.5898Z" fill="#6567F2" stroke="white"/>
                     <path d="M11.4371 36.7564C5.69572 28.5815 7.4832 17.2717 15.5515 11.2795L28.7925 1.44552C34.5339 9.62046 32.7464 20.9303 24.6781 26.9225L11.4371 36.7564Z" fill="#F59F0A" stroke="white"/>
@@ -38,12 +38,12 @@
             <nav class="header__navbar">
                 <ul class="header__list">
                     <li class="header__item">
-                        <a href="#" class="header__link" scroll>
+                        <a href="#production" class="header__link" scroll>
                             Потолки
                         </a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link" scroll>
+                        <a href="#calc" class="header__link" scroll>
                             <svg width="15" height="16" viewBox="0 0 15 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0.0410156 2.16659C0.0410156 1.36117 0.693934 0.708252 1.49935 0.708252H13.166C13.9714 0.708252 14.6243 1.36117 14.6243 2.16659V3.83325C14.6243 4.63867 13.9714 5.29158 13.166 5.29158H1.49935C0.693934 5.29158 0.0410156 4.63867 0.0410156 3.83325V2.16659ZM1.49935 1.95825C1.38429 1.95825 1.29102 2.05153 1.29102 2.16659V3.83325C1.29102 3.94831 1.38429 4.04159 1.49935 4.04159H13.166C13.2811 4.04159 13.3743 3.94831 13.3743 3.83325V2.16659C13.3743 2.05153 13.2811 1.95825 13.166 1.95825H1.49935Z" fill="#F7B23B"/>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0.0410156 8.83325C0.0410156 8.02784 0.693934 7.37492 1.49935 7.37492H6.49935C7.30476 7.37492 7.95768 8.02784 7.95768 8.83325V13.8333C7.95768 14.6387 7.30476 15.2916 6.49935 15.2916H1.49935C0.693934 15.2916 0.0410156 14.6387 0.0410156 13.8333V8.83325ZM1.49935 8.62492C1.38429 8.62492 1.29102 8.71819 1.29102 8.83325V13.8333C1.29102 13.9483 1.38429 14.0416 1.49935 14.0416H6.49935C6.61441 14.0416 6.70768 13.9483 6.70768 13.8333V8.83325C6.70768 8.71819 6.61441 8.62492 6.49935 8.62492H1.49935Z" fill="#F7B23B"/>
@@ -53,12 +53,12 @@
                         </a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link" scroll>
+                        <a href="#price" class="header__link" scroll>
                             Прайс-лист
                         </a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link" scroll>
+                        <a href="#contacts" class="header__link" scroll>
                             Контакты
                         </a>
                     </li>
@@ -78,10 +78,10 @@
                 </button>
                 <div class="header__smallnavbar-clue">
                     <ul>
-                        <li><a href="#" scroll>Потолки</a></li>
-                        <li><a href="#" scroll>Конфигуратор потолков</a></li>
-                        <li><a href="#" scroll>Прайс-лист</a></li>
-                        <li><a href="#" scroll>Контакты</a></li>
+                        <li><a href="#production" scroll>Потолки</a></li>
+                        <li><a href="#calc" scroll>Конфигуратор потолков</a></li>
+                        <li><a href="#price" scroll>Прайс-лист</a></li>
+                        <li><a href="#contacts" scroll>Контакты</a></li>
                     </ul>
                 </div>
             </div>
