--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -30,7 +30,7 @@
         <ul class="hidden-menu__list">
             <li class="hidden-menu__item">
                 <a href="#production" scroll class="hidden-menu__link btn-white">
-                    Потолки
+                    Наши потолки
                 </a>
             </li>
             <li class="hidden-menu__item">
@@ -40,7 +40,7 @@
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M0.207031 8.45825C0.207031 7.65284 0.859949 6.99992 1.66536 6.99992H6.66536C7.47078 6.99992 8.1237 7.65284 8.1237 8.45825V13.4583C8.1237 14.2637 7.47078 14.9166 6.66536 14.9166H1.66536C0.859949 14.9166 0.207031 14.2637 0.207031 13.4583V8.45825ZM1.66536 8.24992C1.55031 8.24992 1.45703 8.34319 1.45703 8.45825V13.4583C1.45703 13.5733 1.55031 13.6666 1.66536 13.6666H6.66536C6.78042 13.6666 6.8737 13.5733 6.8737 13.4583V8.45825C6.8737 8.34319 6.78042 8.24992 6.66536 8.24992H1.66536Z" fill="#F7B23B"/>
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M10.207 8.45825C10.207 7.65284 10.8599 6.99992 11.6654 6.99992H13.332C14.1374 6.99992 14.7904 7.65284 14.7904 8.45825V13.4583C14.7904 14.2637 14.1374 14.9166 13.332 14.9166H11.6654C10.8599 14.9166 10.207 14.2637 10.207 13.4583V8.45825ZM11.6654 8.24992C11.5503 8.24992 11.457 8.34319 11.457 8.45825V13.4583C11.457 13.5733 11.5503 13.6666 11.6654 13.6666H13.332C13.4471 13.6666 13.5404 13.5733 13.5404 13.4583V8.45825C13.5404 8.34319 13.4471 8.24992 13.332 8.24992H11.6654Z" fill="#F7B23B"/>
                     </svg>                        
-                    Конфигуратор потолков
+                    Калькулятор
                 </a>
             </li>
             <li class="hidden-menu__item">
@@ -100,7 +100,7 @@
         <form class="modal__form">
             <input type="text" placeholder="Имя">
             <input type="text" class="masked" placeholder="Телефон">
-            <textarea placeholder="Комментарий"></textarea>
+            <!-- <textarea placeholder="Комментарий"></textarea> -->
             <button type="submit" class="btn-blue">Отправить</button>
         </form>
     </div>
