--- a/src/html/header.html
+++ b/src/html/header.html
@@ -39,7 +39,7 @@
                 <ul class="header__list">
                     <li class="header__item">
                         <a href="#production" class="header__link" scroll>
-                            Потолки
+                            Наши потолки
                         </a>
                     </li>
                     <li class="header__item">
@@ -49,7 +49,7 @@
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0.0410156 8.83325C0.0410156 8.02784 0.693934 7.37492 1.49935 7.37492H6.49935C7.30476 7.37492 7.95768 8.02784 7.95768 8.83325V13.8333C7.95768 14.6387 7.30476 15.2916 6.49935 15.2916H1.49935C0.693934 15.2916 0.0410156 14.6387 0.0410156 13.8333V8.83325ZM1.49935 8.62492C1.38429 8.62492 1.29102 8.71819 1.29102 8.83325V13.8333C1.29102 13.9483 1.38429 14.0416 1.49935 14.0416H6.49935C6.61441 14.0416 6.70768 13.9483 6.70768 13.8333V8.83325C6.70768 8.71819 6.61441 8.62492 6.49935 8.62492H1.49935Z" fill="#F7B23B"/>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M10.041 8.83325C10.041 8.02784 10.6939 7.37492 11.4993 7.37492H13.166C13.9714 7.37492 14.6243 8.02784 14.6243 8.83325V13.8333C14.6243 14.6387 13.9714 15.2916 13.166 15.2916H11.4993C10.6939 15.2916 10.041 14.6387 10.041 13.8333V8.83325ZM11.4993 8.62492C11.3843 8.62492 11.291 8.71819 11.291 8.83325V13.8333C11.291 13.9483 11.3843 14.0416 11.4993 14.0416H13.166C13.2811 14.0416 13.3743 13.9483 13.3743 13.8333V8.83325C13.3743 8.71819 13.2811 8.62492 13.166 8.62492H11.4993Z" fill="#F7B23B"/>
                             </svg>
-                            Конфигуратор потолков                              
+                            Калькулятор                              
                         </a>
                     </li>
                     <li class="header__item">
@@ -78,8 +78,8 @@
                 </button>
                 <div class="header__smallnavbar-clue">
                     <ul>
-                        <li><a href="#production" scroll>Потолки</a></li>
-                        <li><a href="#calc" scroll>Конфигуратор потолков</a></li>
+                        <li><a href="#production" scroll>Наши потолки</a></li>
+                        <li><a href="#calc" scroll>Калькулятор</a></li>
                         <li><a href="#price" scroll>Прайс-лист</a></li>
                         <li><a href="#contacts" scroll>Контакты</a></li>
                     </ul>
